<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">New Fifteen</string>
    <string name="game_name">New Fifteen</string>

    <string name="to_menu">Menu</string>
    <string name="help">Help</string>
    <string name="startNewGame">New Game</string>
    <string name="start_game">Play</string>
    <string name="records">Records</string>
    <string name="help_text">"Help: A solved 15-puzzle example"</string>
    <string name="solve_example">solve example img</string>

    <string name="banner_ad_unit_id">ca-app-pub-4899358131893161/1028793738</string>

</resources>







































