<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackBackground">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menuButton2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:background="@color/buttonBackground"
            android:onClick="goToMainMenu"
            android:paddingBottom="0dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="0dp"
            android:text="@string/to_menu"
            android:textColor="@color/gameTextColor"
            android:textSize="15sp" />

        <Button
            android:id="@+id/startNewGameButton2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:background="@color/buttonBackground"
            android:onClick="startGame"
            android:paddingBottom="0dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="0dp"
            android:text="@string/start_game"
            android:textColor="@color/gameTextColor"
            android:textSize="15sp" />
    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="117dp"
        android:background="@drawable/example"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/solve_example" />

    <TextView
        android:textColor="@color/gameTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_text"
        android:id="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>