<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:text="@string/game_name"
        android:textColor="@color/gameTextColor"
        android:textSize="48sp"
        android:textStyle="italic" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:id="@+id/play_btn"
        android:onClick="startGame"
        android:textColor="@color/gameTextColor"
        android:background="@color/buttonBackground"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/help_btn"
        android:onClick="showHelpPage"
        android:textColor="@color/gameTextColor"
        android:background="@color/buttonBackground"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/play_btn"
        android:layout_alignLeft="@+id/play_btn"
        android:layout_alignStart="@+id/play_btn"
        android:layout_alignRight="@+id/play_btn"
        android:layout_alignEnd="@+id/play_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/records"
        android:id="@+id/records_btn"
        android:onClick="showRecordsPage"
        android:textColor="@color/gameTextColor"
        android:background="@color/buttonBackground"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/help_btn"
        android:layout_alignLeft="@+id/play_btn"
        android:layout_alignStart="@+id/play_btn"
        android:layout_alignRight="@+id/play_btn"
        android:layout_alignEnd="@+id/play_btn" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
